examples/test/testpolicy1283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1283
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key15: value0
      key12: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value31
          key29: value46
      podSelector:
        matchLabels:
          key33: value31
          key29: value30
          key18: value26
